use jlink instead of jre